Add submit button text

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -37,7 +37,7 @@
                     <label for="id_message" class="form-label"></label>
                     {{ form.message|as_crispy_field }}
                 </div>
-                <button type="submit" class="btn btn-primary"></button>
+                <button type="submit" class="btn btn-danger">Submit</button>
             </form>
         </div>
     </div>
